--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 /*logo style*/
 .logo{
-  position: absolute;
+  position: relative;
   background-image: url('../images/logoTransparent.png');
   background-size: 800px 800px;
   background-repeat: no-repeat;
